semi styling finish

--- a/frontend/src/styles/globals/main.css
+++ b/frontend/src/styles/globals/main.css
@@ -1,3 +1,17 @@
 @import url("./_variables.css");
 
+.hidden {
+    display: none
+}
 
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: quicksand;
+    width: 100%;
+    height: 100%;
+}
