--- a/frontend/src/styles/components/NavigationBar.css
+++ b/frontend/src/styles/components/NavigationBar.css
@@ -1,42 +1,74 @@
 /***************   NAVIBAR ITEMS  ***************/
 .navi-bar {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
-.hidden {
-    display: none
-}
-
-.navi-home {
-    width: 500px;
-}
-
-.navi-bar {
-
     height: 70px;
-    border-bottom: 2px solid #CCCCCC;
-    padding: 0px 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50rem;
+    background-color: var(--black);
 }
 
 .navi-login-container {
     list-style-type: none;
     display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
+    gap: 2rem;
+    /* flex-direction: row; */
+    /* align-items: center; */
     cursor: pointer;
-    margin-left: 50rem;
-    margin-top: -3rem;
 }
 
-.navi-login-login, .navi-login-signup {
-    padding: 0px 15px;
-    width: 60px;
-    font-weight: 500;
+.navi-home {
+    font-size: 56px;
+    font-weight: 700;
+    color: var(--primary-dark);
 }
 
-.navi-logo {
-    max-width: 240px;
+.navi-login-login-button, .navi-login-signup-button  {
+    display: flex;
+    align-items: center;
+    height: 2rem;
+    padding: 1.2rem;
+    background: var(--primary-light);
+    border-radius: 1rem;
+    font-size: 20px;
+    font-weight: 600;
 }
+
+/* .navi-login-signup-button {
+    display: flex;
+    align-items: center;
+    height: 2rem;
+    padding: 1rem;
+    background: var(--primary-light);
+}
+
+ */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .navi-button {
     width: 33px;
