--- a/frontend/src/styles/globals/_variables.css
+++ b/frontend/src/styles/globals/_variables.css
@@ -1,3 +1,43 @@
-/* :root {
+:root {
+    --border: #CCCCCC;
+    --white: #F6F6F6;
+    --black: #000000;
+    --primary-light: #5CE1E6;
+    --primary-dark: #004AAD;
+    --banner: #2789E9;
+}
 
-} */
+@font-face {
+    font-family: "quicksand";
+    font-style: normal;
+    font-weight: 300;
+    src: url(../../fonts/Quicksand/Quicksand-Light.ttf);
+}
+
+@font-face {
+    font-family: "quicksand";
+    font-style: normal;
+    font-weight: 400;
+    src: url(../../fonts/Quicksand/Quicksand-Regular.ttf);
+}
+
+@font-face {
+    font-family: "quicksand";
+    font-style: normal;
+    font-weight: 500;
+    src: url(../../fonts/Quicksand/Quicksand-Medium.ttf);
+}
+
+@font-face {
+    font-family: "quicksand";
+    font-style: normal;
+    font-weight: 600;
+    src: url(../../fonts/Quicksand/Quicksand-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: "quicksand";
+    font-style: normal;
+    font-weight: 700;
+    src: url(../../fonts/Quicksand/Quicksand-Bold.ttf);
+}
