--- a/frontend/src/styles/components/LoginForm.css
+++ b/frontend/src/styles/components/LoginForm.css
@@ -1,22 +1,15 @@
 /***************   MODAL LOG IN CONTENT  ***************/
 .login-modal-container {
-    width: 404px;
     padding: 0px 2.5rem;
-    padding-bottom: 2rem;
-    padding-top: 2.25rem;
-
+    padding-bottom: 3rem;
 }
-
-.login-modal-icon > i {
-    color:rgb(227, 36, 90);
-    font-size: 3rem;
+.login-modal-icon {
     display: flex;
     justify-content: center;
-    margin-bottom: .5rem;
 }
 
 .login-modal-title {
-    margin-top: 0px;
+    margin-top: -1rem;
     font-size: 1.75rem;
     margin-bottom: .5rem;
 }
@@ -25,7 +18,6 @@
     list-style-type: none;
     display: flex;
     justify-content: center;
-
 }
 
 .login-modal-header-container {
@@ -39,8 +31,9 @@
 }
 
 .signup-modal {
-    color: #00798A;
+    color: var(--primary-light);
     margin-left: .5rem;
+    font-weight: 600;
     cursor: pointer;
 }
 
@@ -57,27 +50,22 @@
 }
 
 .login-modal-input {
-    width: 19.75rem;
-    height: 1.25rem;
+    width: 23rem;
+    height: 2.5rem;
     padding: 8px 12px;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     border-radius: .5rem;
-    border: 1px solid #CCCCCC
+    border: 1px solid var(--border)
 }
 
 .login-modal-input:focus  {
     outline: none;
-    border: 1px solid #00798A;
 }
 
-.login-modal-input:hover {
-    border: 1px solid black;
-    transition-duration: .5s;
-}
 
 .login-modal-button {
-    width: 21.5rem;
-    background-color: #e32359;
+    width: 23rem;
+    background-color: var(--primary-light);
     color: white;
     border-radius: .5rem;
     margin-top: 16px;
@@ -102,19 +90,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
+    margin: 2rem 1rem;
 }
 
 .login-modal-separator-center {
     padding: 0px .75rem;
-    color: #CCCCCC
+    color: var(--border)
 }
 
 .login-modal-separator-border {
-    border: 0.1em solid #CCCCCC;
-    width: 9.2rem;
-    max-height: 0.1px;
-    margin-bottom: 0px;
+    border: 0.1em solid var(--border);
+    width: 10.2rem;
 }
 
 .login-modal-link-container {
@@ -125,13 +111,13 @@
 }
 
 .login-modal-link {
-    background-color: white;
+    background-color: var(--white);
     width: 21.5rem;
     border-radius: .5rem;
     height: 3.25rem;
     font-size: 1rem;
     padding-left: 1rem;
-    border: 1px solid #CCCCCC;
+    border: 1px solid var(--border);
     cursor: pointer;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -139,62 +125,45 @@
 .login-modal-keep-signed-in {
     display: flex;
     align-items: center;
-    width: 21.25rem;
+    width: 22.25rem;
     font-size: 14px;
     margin-top: 5px;
 }
 
 .login-modal-keep-signed-in > span {
-    margin-left: .5rem;
+    margin-left: .8rem;
 }
 
 .login-modal-keep-signed-in-checkout {
     opacity: 0;
     z-index: 2;
-    box-shadow: 0 0 2px 1px #00798A
+    cursor: pointer;
+    box-shadow: 0 0 2px 1px var(--primary-light)
 }
 
 .login-modal-keep-signed-in-icon{
     z-index: 1;
     position: absolute;
-    fill: #00798A;
+    cursor: pointer;
+    fill: var(--primary-light)
 }
 
-.login-modal-keep-signed-in-icon::shadow {
-    box-shadow: 0 0 2px 1px rgb(0, 121, 138)
-}
-
-.fa-facebook-f {
-    color: rgb(66, 103, 178);
-    position: absolute;
-    margin-right: 17rem;
-    margin-top: 1.6rem;
-}
-
-.fa-g {
-    position: absolute;
-    margin-right: 17rem;
-    margin-top: 5.1rem;
-}
-
-.fa-apple {
-    position: absolute;
-    margin-right: 17rem;
-    margin-top: 10rem;
+.login-modal-keep-signed-in-icon:hover {
+    cursor: pointer;
 }
 
 .fa-xmark {
-    position: fixed;
-    margin-left: 25.9rem;
-    margin-top: -16px;
+    position: absolute;
+    margin-left: 25.4rem;
+    margin-top: 1.5rem;
     color: #999999;
     cursor: pointer;
 }
 
 .login-modal-reveal-pass-container {
     position: fixed;
-    margin-top: 7rem;
-    margin-left: 19.3rem;
+    margin-top: 7.5rem;
+    margin-left: 20.75rem;
     z-index: 2;
 }
 
@@ -205,8 +174,8 @@
 
 .reveal-pass {
     position: absolute;
-    margin-left: 19.3rem;
-    margin-top: 7.6rem;
+    margin-left: 20.75rem;
+    margin-top: 8.25rem;
     z-index: 1;
     cursor: pointer;
 }
@@ -220,22 +189,41 @@
     flex-direction: column;
     justify-content: flex-end;
     font-size: 14px;
-    color: #00798A;
+    color: var(--primary-light);
     margin-bottom: .25rem;
     cursor: pointer;
 }
 
-.login-modal-errors {
-    font-size: 18px;
-    color: #e32359;
+.error {
+    border: 2px solid var(--errors);
+}
+
+.error-input-email {
+    color: var(--errors);
     position: absolute;
-    font-weight: 700;
-    margin-top: -1.85rem;
+    font-size: 14px;
+    margin-top: 4.2rem;
+    margin-right: 7.5rem;
+}
+
+.error-input-password {
+    color: var(--errors);
+    position: absolute;
+    font-size: 14px;
+    margin-top: 9.75rem;
+    margin-right: 7.5rem;
 }
 
 /************************************** DEMO USER **************************************/
 
 .login-modal-footer {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.login-modal-footer > span {
+    color: var(--primary-light);
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
 }
