--- a/frontend/src/styles/globals/_variables.css
+++ b/frontend/src/styles/globals/_variables.css
@@ -1,6 +1,7 @@
 :root {
     --border: #CCCCCC;
     --white: #F6F6F6;
+    --gray: #999999;
     --black: #000000;
     --primary-light: #5CE1E6;
     --primary-light-accent: #12f7ff;
