--- a/frontend/src/styles/components/LandingPage.css
+++ b/frontend/src/styles/components/LandingPage.css
@@ -1,8 +1,7 @@
 .landing-page-video {
     display: flex;
     justify-content: center;
-}
-
-.landing-page-video {
     background-color: var(--black);
+    position: relative;
+    z-index: -1;
 }
