--- a/frontend/src/styles/components/LoginForm.css
+++ b/frontend/src/styles/components/LoginForm.css
@@ -34,6 +34,7 @@
     color: var(--primary-light);
     margin-left: .5rem;
     font-weight: 600;
+    list-style-type: none;
     cursor: pointer;
 }
 
@@ -71,10 +72,12 @@
     margin-top: 16px;
     height: 3rem;
     border: none;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     cursor: pointer;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: quicksand;
+    transition-duration: .2s;
+    transition-timing-function: ease-in-out;
 }
 
 .login-modal-button:disabled {
