--- a/frontend/src/styles/components/SignupForm.css
+++ b/frontend/src/styles/components/SignupForm.css
@@ -53,18 +53,18 @@
 .signup-modal-button {
     width: 23.5rem;
     background-color: var(--primary-light);
+    font-family: quicksand;
     color: white;
     border-radius: .5rem;
     height: 3rem;
     border: none;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     cursor: pointer;
     transition-duration: .2s;
     transition-timing-function: ease-in-out;
     margin-top: .5rem;
     margin-bottom: .8rem;
-    /* margin: 1rem 0px; */
 }
 
 .signup-modal-button:disabled {
