finished sign up modal

--- a/frontend/src/styles/components/NavigationBar.css
+++ b/frontend/src/styles/components/NavigationBar.css
@@ -32,6 +32,7 @@
     border-radius: 1rem;
     font-size: 20px;
     font-weight: 600;
+    color: var(--white);
 }
 
 .navi-login-login-button:hover, .navi-login-signup-button:hover {
@@ -44,63 +45,25 @@
     background: var(--primary-light);
 }
 
-/* .navi-login-signup-button {
-    display: flex;
-    align-items: center;
-    height: 2rem;
-    padding: 1rem;
-    background: var(--primary-light);
-}
-
- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .navi-button {
-    width: 33px;
-    height: 33px;
+    padding: 1rem;
+    height: 2.2rem;
     border-radius: 20px 20px;
     border: none;
-    background-color: rgb(227, 35, 89);
-    color: white
+    background-color: var(--primary-light);
+    color: var(--white);
+    margin-left: 3.6rem;
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .fa-angle-up, .fa-angle-down {
     color: #CCCCCC;
     padding-left: 5px;
-}
-
-.profile-dropdown {
-    background-color: white;
-    border: 1px solid black;
-    position: absolute;
-    margin-top: 209px;
-    padding-left: 0px;
-    list-style-type: none;
+    margin-right: 3.3rem;
 }
 
 .navi-icons {
@@ -109,20 +72,49 @@
     justify-content: flex-end;
 }
 
-.navi-icon-new-group {
-    color: #00798A;
-    font-weight: 500;
-    padding-right: 1.75rem;
-    cursor: pointer;
-    font-size: 14px;
+.profile-dropdown {
+    background-color: var(--border);
+    border-radius: .5rem;
+    position: absolute;
+    margin-top: 193px;
+    margin-right: 3.3rem;
+    list-style-type: none;
+    width: 15rem;
+    padding: .5rem 0px;
 }
 
+.profile-dropdown-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: default;
+}
 
 .profile-dropdown-container > li {
-    padding: 4px 15px;
+    padding-right: 1rem;
+}
+.profile-dropdown-menu-option {
+    width: 92%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 2rem;
+    transition-duration: .2s;
+    transition-timing-function: ease;
+    margin-right: 0.5rem;
+    padding: 0px 0.5rem;
 }
 
-.profile-dropdown-logout-container {
-    border-top: 1px solid black;
+.profile-dropdown-menu-option:hover {
+    background-color: var(--primary-dark);
+    border-radius: .2rem;
     cursor: pointer;
+}
+
+.profile-dropdown-border {
+    border: 1px solid black;
+    width: 100%;
+    margin: .5rem 0px;
 }
