--- a/frontend/src/styles/components/LandingPage.css
+++ b/frontend/src/styles/components/LandingPage.css
@@ -1,8 +1,50 @@
-.landing-page-video {
+.landing-page-video_inner {
     display: flex;
     justify-content: center;
     background-color: var(--black);
     position: relative;
     z-index: -1;
-    /* height: 100vh; */
+}
+
+.landing-page-slide-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+    background-color: var(--black);
+    height: 261px
+}
+
+.landing-page-slide_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.landing-page-slider {
+    height: 2.5rem;
+    width: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing-page-info {
+    background-color: var(--black);
+    height: 1028px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.landing-page-info_inner {
+    color: var(--white);
+}
+
+.landing-page-block {
+    border: 1px solid red;
+    height: 100%;
 }
