--- a/frontend/src/styles/globals/main.css
+++ b/frontend/src/styles/globals/main.css
@@ -4,14 +4,18 @@
     display: none
 }
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+* ::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     font-family: quicksand;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
