--- a/frontend/src/styles/components/LandingPage.css
+++ b/frontend/src/styles/components/LandingPage.css
@@ -4,6 +4,7 @@
     background-color: var(--black);
     position: relative;
     z-index: -1;
+    padding-top: 70px;
 }
 
 .landing-page-slide-container {
