--- a/frontend/src/styles/components/NavigationBar.css
+++ b/frontend/src/styles/components/NavigationBar.css
@@ -12,6 +12,10 @@
     z-index: 1;
 }
 
+.navi-home {
+    cursor: pointer;
+}
+
 .navi-login-container {
     list-style-type: none;
     display: flex;
