--- a/frontend/src/styles/components/MainPage.css
+++ b/frontend/src/styles/components/MainPage.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../../../public/images/MainPage_Header.png);
+    background-image: url(/images/MainPage_Header.png);
     height: 500px;
 }
 
@@ -34,9 +34,35 @@
     margin-bottom: 2rem;
 }
 
-.main-page-body_options {
+.main-page-body-options-container {
     height: 20rem;
     width: 15rem;
+    padding-left: 0.7rem;
+    padding-top: 1rem;
     border-radius: .5rem;
     background-color: var(--gray);
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.main-page-body-options_inner > i {
+    color: var(--primary-light);
+}
+
+.main-page-body-options_inner {
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+}
+
+.main-page-body-options_inner > p {
+    padding: 0px .5rem;
+}
+
+.main-page-body-options_inner > p:hover {
+    cursor: pointer;
+    border-radius: .5rem;
+    box-shadow: 0px 0px 15px var(--primary-light);
+    background-color: var(--primary-light);
 }
