--- a/frontend/src/styles/globals/_variables.css
+++ b/frontend/src/styles/globals/_variables.css
@@ -17,33 +17,33 @@
     font-family: "quicksand";
     font-style: normal;
     font-weight: 300;
-    src: url(../../fonts/Quicksand/Quicksand-Light.ttf);
+    src: url(../../../public/fonts/Quicksand/Quicksand-Light.ttf);
 }
 
 @font-face {
     font-family: "quicksand";
     font-style: normal;
     font-weight: 400;
-    src: url(../../fonts/Quicksand/Quicksand-Regular.ttf);
+    src: url(../../../public/fonts/Quicksand/Quicksand-Regular.ttf);
 }
 
 @font-face {
     font-family: "quicksand";
     font-style: normal;
     font-weight: 500;
-    src: url(../../fonts/Quicksand/Quicksand-Medium.ttf);
+    src: url(../../../public/fonts/Quicksand/Quicksand-Medium.ttf);
 }
 
 @font-face {
     font-family: "quicksand";
     font-style: normal;
     font-weight: 600;
-    src: url(../../fonts/Quicksand/Quicksand-SemiBold.ttf);
+    src: url(../../../public/fonts/Quicksand/Quicksand-SemiBold.ttf);
 }
 
 @font-face {
     font-family: "quicksand";
     font-style: normal;
     font-weight: 700;
-    src: url(../../fonts/Quicksand/Quicksand-Bold.ttf);
+    src: url(../../../public/fonts/Quicksand/Quicksand-Bold.ttf);
 }
