--- a/frontend/src/styles/globals/_variables.css
+++ b/frontend/src/styles/globals/_variables.css
@@ -11,6 +11,7 @@
     --primary-dark: #004AAD;
     --primary-light: #5CE1E6;
     --primary-light-accent: #12f7ff;
+    --ticket: 	#FFA5A5;
     --white: #F6F6F6;
 }
 
