--- a/frontend/src/styles/components/TicketInfo.css
+++ b/frontend/src/styles/components/TicketInfo.css
@@ -1,7 +1,7 @@
 .ticket-info-container {
     height: 1003px;
     background-color: var(--border);
-    padding: .1rem .5rem;
+    padding: .1rem 2rem;
 }
 
 .ticket-info_inner {
@@ -10,4 +10,17 @@
     border-top-right-radius: .5rem;
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
+    box-shadow: 4px 4px 3px var(--black);
+}
+
+.ticket-info-header {
+    background-color: var(--black);
+    color: var(--white);
+    width: fit-content;
+    padding: 0px .5rem;
+    font-size: 28px;
+    font-weight: 700;
+    margin-left: 1.5rem;
+    border-top-left-radius: .5rem;
+    border-top-right-radius: .5rem;
 }
