--- a/frontend/src/styles/components/TicketInfoProduct.css
+++ b/frontend/src/styles/components/TicketInfoProduct.css
@@ -8,4 +8,55 @@
     border-radius: .5rem;
     height: 15rem;
     padding-top: .5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.ticket-info-product {
+    display: flex;
+    justify-content: center;
+}
+
+.product-header {
+    width: 20vw;
+    background-color: var(--active);
+    margin-left: .5rem;
+    margin-bottom: .5rem;
+    padding: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: var(--white);
+    font-size: 26px;
+    font-weight: 500;
+    border-top-left-radius: .5rem;
+    border-bottom-left-radius: .5rem;
+}
+
+.product-header > p {
+    padding-left: 1rem;
+}
+
+.product-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: var(--active);
+    margin-bottom: .5rem;
+    margin-right: .55rem;
+    padding-right: 1rem;
+    border-top-right-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+}
+
+.product-input > input {
+    border: 1px solid var(--gray);
+    height: 2rem;
+    width: 20vw;
+    margin-left: 2rem;
+    padding-left: 1rem;
+    border-radius: .5rem;
+       font-family: quicksand;
+   font-size: 16px;
+   font-weight: 500;
 }
