ticket product info

--- a/frontend/src/styles/components/Ticket.css
+++ b/frontend/src/styles/components/Ticket.css
@@ -1,6 +1,6 @@
 .ticket-search-container {
     padding-top: 75px;
-    height: 159px;
+    height: 161px;
     background-color: var(--border);
 }
 
@@ -8,7 +8,7 @@
     color: var(--white);
     background-color: var(--background);
     height: 80px;
-    padding: .1rem 2.5rem;
+    padding: 0rem 2.5rem;
     margin: 0px 2rem;
     border-radius: .5rem;
     display: flex;
