--- a/frontend/src/styles/globals/main.css
+++ b/frontend/src/styles/globals/main.css
@@ -24,3 +24,7 @@ body {
     background-color: var(--active);
     border-bottom: 1px solid var(--black);
 }
+
+.errors {
+    border: 2px solid var(--errors);
+}
