--- a/frontend/src/styles/components/TicketInfoCustomer.css
+++ b/frontend/src/styles/components/TicketInfoCustomer.css
@@ -32,6 +32,50 @@
    border-bottom-left-radius: .5rem;
 }
 
+.ticket-address-container1 {
+   width: 21vw;
+   background-color: var(--active);
+   padding: .5rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   color: var(--white);
+   font-size: 26px;
+   font-weight: 500;
+   border-top-left-radius: .5rem;
+   border-bottom-left-radius: .5rem;
+}
+
+.ticket-address-container2 {
+   width: 21vw;
+   background-color: var(--active);
+   padding: .5rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   color: var(--white);
+   font-size: 26px;
+   font-weight: 500;
+   border-top-right-radius: .5rem;
+   border-bottom-right-radius: .5rem;
+}
+
+.ticket-address-input_inner > input {
+   border: 1px solid var(--gray);
+   height: 2rem;
+   width: 20vw;
+   margin-left: .3rem;
+   border-radius: .5rem;
+   font-family: quicksand;
+   font-size: 16px;
+   font-weight: 500;
+}
+
+.ticket-address-input_inner  > input:focus {
+   outline: none;
+}
+
+
 .ticket-header > p {
    padding-left: 1rem;
 }
@@ -62,4 +106,12 @@
 
 .ticket-input > input:focus {
    outline: none;
+}
+
+.error-address {
+   color: var(--ticket);
+   font-size: 16px;
+   font-weight: 700;
+   position: absolute;
+   margin-left: .4rem;
 }
