--- a/frontend/src/styles/components/TicketInfoCustomer.css
+++ b/frontend/src/styles/components/TicketInfoCustomer.css
@@ -69,6 +69,7 @@
    font-family: quicksand;
    font-size: 16px;
    font-weight: 500;
+   padding-left: 1.5rem;
 }
 
 .ticket-address-input_inner  > input:focus {
