--- a/frontend/src/styles/components/TicketInfoProduct.css
+++ b/frontend/src/styles/components/TicketInfoProduct.css
@@ -31,6 +31,7 @@
     font-weight: 500;
     border-top-left-radius: .5rem;
     border-bottom-left-radius: .5rem;
+    box-shadow: 5px 4px 3px var(--black);
 }
 
 .product-header > p {
@@ -47,6 +48,8 @@
     padding-right: 1rem;
     border-top-right-radius: .5rem;
     border-bottom-right-radius: .5rem;
+    box-shadow: 4px 4px 3px var(--black);
+
 }
 
 .product-input_inner > input, .product-input_inner > select {
