--- a/frontend/src/styles/components/TicketList.css
+++ b/frontend/src/styles/components/TicketList.css
@@ -24,7 +24,6 @@
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
     box-shadow: 4px 4px 3px var(--black);
-
 }
 
 .ticket-list_inner > h3 {
@@ -41,7 +40,9 @@
     justify-content: center;
     height: 42px;
     cursor: default;
-
+    border-bottom: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-right: 1px solid var(--black);
 }
 
 .ticket-list-page-num-container {
