--- a/frontend/src/styles/components/TicketServiceParts.css
+++ b/frontend/src/styles/components/TicketServiceParts.css
@@ -1,8 +1,13 @@
 .ticket-part-header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr .5fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr .75fr .5fr;
     grid-auto-rows: 42px;
     margin: 1rem;
+    box-shadow: 1px 6px 5px var(--black);
+}
+
+.ticket-info-part-container {
+    padding-top: .5rem;
 }
 
 .ticket-info-part_inner {
@@ -27,12 +32,12 @@
     align-items: center;
     justify-content: center;
     color: var(--white);
+    box-shadow: 4px 4px 5px var(--black);
 }
 
 .ticket-part-header > select {
     color: var(--white);
     outline: none;
-    padding-left: 10%;
     font-family: quicksand;
     font-size: 16px;
     border: 0;
