--- a/frontend/src/styles/components/TicketServiceParts.css
+++ b/frontend/src/styles/components/TicketServiceParts.css
@@ -23,31 +23,50 @@
     color: var(--white);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     border-bottom: 1px solid var(--white);
+    padding-left: 2rem;
 }
 
-.ticket-part-header > p {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--white);
+.ticket-part-header > input {
+    background-color: var(--gray);
     box-shadow: 4px 4px 5px var(--black);
+    border: 0;
+    outline: none;
+    font-family: quicksand;
+    font-size: 16px;
+    padding-left: 2rem;
+    border-bottom: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-right: 1px solid var(--black);
+}
+
+.ticket-part-header > input::placeholder {
+    color: var(--white);
 }
 
 .ticket-part-header > select {
+    background-color: var(--gray);
     color: var(--white);
     outline: none;
     font-family: quicksand;
     font-size: 16px;
     border: 0;
+    padding-left: 1.7rem;
+    border-bottom: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-right: 1px solid var(--black);
 }
 
-
 .ticket-part-header > h4 {
+    background-color: var(--gray);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-right: 1rem;
+    border-bottom: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-right: 1px solid var(--black);
 }
 
 .ticket-part-header > h4:hover {
