--- a/frontend/src/styles/components/TicketInfoCustomer.css
+++ b/frontend/src/styles/components/TicketInfoCustomer.css
@@ -5,8 +5,8 @@
     background-color: var(--border);
     margin: 0px .5rem;
     border-radius: .5rem;
-    height: 15rem;
-    padding-top: .5rem;
+    height: 17rem;
+    padding: 1.5rem 0px;
     display: grid;
     grid-template-columns: 1fr 1fr;
  }
