update button for part

--- a/frontend/src/styles/components/TicketServiceParts.css
+++ b/frontend/src/styles/components/TicketServiceParts.css
@@ -40,10 +40,27 @@
     border-bottom: 1px solid var(--black);
     border-left: 1px solid var(--black);
     border-right: 1px solid var(--black);
+    color: var(--white);
 }
 
 .ticket-part-header > input::placeholder {
     color: var(--white);
+}
+
+.ticket-part-header > p {
+    background-color: var(--gray);
+    color: var(--white);
+    box-shadow: 4px 4px 5px var(--black);
+    border: 0;
+    outline: none;
+    font-family: quicksand;
+    font-size: 16px;
+    padding-left: 2rem;
+    border-bottom: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-right: 1px solid var(--black);
+    display: flex;
+    align-items: center;
 }
 
 .ticket-part-header > select {
@@ -60,21 +77,26 @@
     box-shadow: 4px 4px 5px var(--black);
 }
 
-.ticket-part-header > h4 {
+.part-list-options {
+    display: flex;
+}
+
+.part-list-options > h4 {
     background-color: var(--gray);
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    padding-right: 1rem;
+    justify-content: center;
     border-bottom: 1px solid var(--black);
     border-left: 1px solid var(--black);
     border-right: 1px solid var(--black);
     box-shadow: 4px 4px 5px var(--black);
+    color: var(--primary-light);
+    width: 100%;
 }
 
-.ticket-part-header > h4:hover {
+.part-list-options > h4:hover {
     cursor: pointer;
-    text-decoration-line: underline;
+    text-decoration: underline;
 }
 
 .error-service-tracking {
