--- a/frontend/src/styles/components/TicketServiceParts.css
+++ b/frontend/src/styles/components/TicketServiceParts.css
@@ -103,9 +103,34 @@
     color: var(--ticket);
     font-size: 18px;
     font-weight: 700;
-    margin: 0px 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr .75fr .5fr;
+    /* margin: 0px 1rem; */
+    display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr .75fr .5fr; */
+    position: absolute;
+}
+.error-service-tracking-number {
+    margin-left: 1rem;
+    margin-top: -.3rem;
+}
+
+.error-service-tracking-description {
+    margin-left: 20.1rem;
+    margin-top: -.3rem;
+}
+
+.error-service-tracking-price {
+    margin-left: 20.1rem;
+    margin-top: -.3rem;
+}
+
+.error-service-tracking-quantity {
+    margin-left: 20.1rem;
+    margin-top: -.3rem;
+}
+
+.error-service-tracking-status {
+    margin-left: 20.1rem;
+    margin-top: -.3rem;
 }
 
 .part-list-page-num {
