styling fix on part list

--- a/frontend/src/styles/components/TicketServiceParts.css
+++ b/frontend/src/styles/components/TicketServiceParts.css
@@ -15,6 +15,7 @@
     margin: 0px 0.5rem;
     border-radius: 0.5rem;
     max-height: 28rem;
+    min-height: 12rem;
     padding: 0.5rem 0px;
 }
 
