--- a/frontend/src/styles/components/LoginForm.css
+++ b/frontend/src/styles/components/LoginForm.css
@@ -141,7 +141,9 @@
     opacity: 0;
     z-index: 2;
     cursor: pointer;
-    box-shadow: 0 0 2px 1px var(--primary-light)
+    padding-left: 0.2rem;
+    margin-left: 0.35rem;
+    height: 1rem;
 }
 
 .login-modal-keep-signed-in-icon{
