--- a/frontend/src/styles/components/LandingPage.css
+++ b/frontend/src/styles/components/LandingPage.css
@@ -64,7 +64,6 @@
     gap: 2rem;
 }
 
-
 .landing-page-ref {
     height: 70px;
     background-color: var(--black);
@@ -72,6 +71,10 @@
 
 .landing-page-final-info_inner > h1 {
     font-size: 24px;
+}
+
+.landing-page-final-info_inner > img {
+    margin-right: 5rem;
 }
 
 .landing-page-info_inner > h1 {
