--- a/frontend/src/styles/components/MainPage.css
+++ b/frontend/src/styles/components/MainPage.css
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
+    box-shadow: 3px 3px 5px var(--black);
 }
 
 .main-page-body-options_inner > i {
