--- a/frontend/src/styles/components/NavigationBar.css
+++ b/frontend/src/styles/components/NavigationBar.css
@@ -8,7 +8,7 @@
     background-color: var(--black);
     width: 100%;
     position: fixed;
-    border-bottom: 1px solid var(--border);
+    border-bottom: 1px solid var(--white);
     z-index: 1;
 }
 
