add technician names

--- a/frontend/src/styles/components/GoogleMaps.css
+++ b/frontend/src/styles/components/GoogleMaps.css
@@ -12,7 +12,7 @@
 
 .schedule-date-container {
     background-color: var(--background);
-    width: 26rem;
+    width: 24rem;
     height: 7rem;
     border-radius: .5rem;
     display: flex;
@@ -22,7 +22,7 @@
 }
 
 .schedule-date_inner {
-    width: 20rem;
+    width: 19rem;
     background-color: var(--border);
     height: 5rem;
     border-radius: .5rem;
@@ -47,6 +47,9 @@
     height: 2.5rem;
     width: 10rem;
     padding-left: 1.8rem;
+    border: 0;
+    border-radius: .5rem;
+    outline: none;
 }
 
 .schdule-date-tab {
@@ -59,16 +62,6 @@
     border-radius: .5rem;
 }
 
-.google-map-second-background {
-    background-color: var(--gray);
-    width: 98.5%;
-    height: 53.5rem;
-    border-radius: .5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 4px 4px 5px var(--black);
-}
 
 .google-map-background-container {
     background-color: var(--background);
@@ -79,14 +72,4 @@
     align-items: center;
     border-radius: .5rem;
     box-shadow: 4px 4px 5px var(--black);
-}
-
-.google-map-background_inner {
-    background-color: var(--border);
-    width: 98.5%;
-    height: 55.5rem;
-    border-radius: .5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
