--- a/frontend/src/styles/components/ScheduleTechnician.css
+++ b/frontend/src/styles/components/ScheduleTechnician.css
@@ -1,9 +1,57 @@
 .technician-container {
     background-color: var(--border);
-    height: 20rem;
+    height: fit-content;
     border: 1px solid red;
 }
 
 .technician_inner {
-    border: 1px solid blue;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+}
+
+.single-technician-container {
+    background-color: var(--background);
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: repeat(10, 42px);
+    margin-top: 1rem;
+    /* padding-top: 1rem; */
+    /* border: 1px solid yellow; */
+    width: 100%;
+}
+
+.single-technician-header {
+    grid-row: 1/2;
+    grid-column: 2/6;
+    display: flex;
+    justify-content: center;
+}
+
+.single-technician-time {
+    grid-column: 1/1;
+    grid-row: 2/11;
+    border-top: 1px solid var(--black);
+    border-left: 1px solid var(--black);
+    border-bottom: 1px solid var(--black);
+}
+
+.single-technician-time > h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 42px;
+    border-bottom: 1px solid var(--black);
+}
+
+.single-technician-shedule {
+    grid-row: 2/11;
+    grid-column: 2/2;
+    border: 1px solid var(--black);
+}
+
+.single-technician-shedule_inner > p {
+    min-height: 42px;
 }
