--- a/frontend/src/styles/components/ScheduleTechnician.css
+++ b/frontend/src/styles/components/ScheduleTechnician.css
@@ -1,13 +1,27 @@
 .technician-container {
     background-color: var(--border);
     height: fit-content;
-    border: 1px solid red;
 }
 
 .technician_inner {
-    margin: 1rem;
+    /* margin: 1rem; */
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 1rem;
+}
+
+.technician-name > h1 {
+    display: flex;
+    justify-content: center;
+    background-color: var(--black);
+    color: var(--white);
+    margin-top: 2rem;
+    box-shadow: 8px 11px 5px var(--black);
+    border-top-left-radius: .5rem;
+    border-top-right-radius: .5rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--white);
 }
